# powerpoint-mcp

./: README.ja.md  README.md  README.zh-CN.md  pyproject.toml
powerpoint_mcp/: server.py
